2012-07-20  Corinna Vinschen  <corinna@vinschen.de>

	* pathnames.sgml (pathnames-intro): Remove paragraph on UNC paths.
	Try to be clearer on POSIX vs. Win32 paths.
	(unc-paths): New section.
	(cygdrive): Fix a few SGML qualifiers.
	* setup-net.sgml: Move ntsec section from here...
	* using.sgml: ..to here.

2012-07-18  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* new-features.sgml (ov-new1.7.16): Document getmntent_r.

2012-07-17  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* faq-programming.xml (faq.programming.unix-gui): Update to
	reflect the availability of X11 toolkits on Cygwin.

2012-06-03  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml (ov-new1.7.16): Document ReFS support.

2012-05-10  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* new-features.sgml (ov-new1.7.16): Document memrchr.

2012-05-09  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* new-features.sgml (ov-new1.7.15): Fix XML syntax.

2012-05-07  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* new-features.sgml (ov-new1.7.15): Fix tag.

2012-05-06  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* cygwinenv.sgml: Add pipe_byte description.
	* new-features.sgml (ov-new1.7.15): Add new pipe_byte description for
	1.7.15.

2012-04-25  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml (ov-new1.7.14): Add mouse reporting mode 1005.

2012-04-24  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml (ov-new1.7.14): New section.  Add new console mouse
	reporting modes.

2012-04-24  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* configure: Regenerate.

2012-04-23  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* faq-using.xml (faq.using.emacs, faq.using.xemacs): Change links
	from http://cygwin.com/xfree to http://x.cygwin.com.

2012-04-23  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* faq-programming.xml (faq.programming.objective-c): Update for gcc4.