@@ -1,3 +1,7 @@
+2012-08-03  Adam Dinwoodie  <Adam.Dinwoodie@metaswitch.com>
+
+	 * faq-using.xml (faq.using.man): Make relevance to whatis explicit.
+
 2012-07-20  Corinna Vinschen  <corinna@vinschen.de>
 
 	* pathnames.sgml (pathnames-intro): Remove paragraph on UNC paths.
